force-app/main/default/objects/OrgMonitoringPodHistory__c/OrgMonitoringPodHistory__c.object-meta.xml
<CustomObject>
    <label>OrgMonitoringPodHistory</label>
    <nameField>
        <label>OrgMonitoringPodHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgMonitoringPodHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>