force-app/main/default/objects/OrgMonitoringPodHistory__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>Availability</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>