force-app/main/default/objects/OrgMonitoringPodHistory__c/fields/nbKO__c.field-meta.xml
<CustomField>
    <fullName>nbKO__c</fullName>
    <label>nbKO</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>