force-app/main/default/objects/OrgMonitoringPodHistory__c/fields/nbOK__c.field-meta.xml
<CustomField>
    <fullName>nbOK__c</fullName>
    <label>nbOK</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>